<resources>
    <string name="project_name4.0">GRIRMS4.0</string>
    <string name="project_name4.5">GRIRMS4.5</string>
    <string name="app_normalname">中融VOFFICE</string>
    <string name="app_package_name">com.gcg.grirms</string>
    <string name="init_intro">管道隐患随时监察\n\n现场防爆安全管控</string>
    <string name="app_name4.5">执掌销售</string>
    <string name="notify_list_head_ch">公告</string>
    <string name="abs_statistics_title">销售统计</string>
    <string name="login_4g_title">激活账号</string>
    <string name="todo_list_head">待审批事项提醒</string>
    <string name="lon">经度  :  </string>
    <string name="lat">纬度  :  </string>
    <string name="position">位置  :  </string>
    <string name="type">类型  :  </string>
    <string name="photo">照片  :  </string>
    <string name="explain">说明  :  </string>
    <string name="start_work">上班  :  </string>
    <string name="end_work">下班  :  </string>
    <string name="s_work">上班</string>
    <string name="e_work">下班 </string>
    <string name="work_over">加班</string>
    <string name="yidaka">已打卡</string>
    <string name="weidaka">打卡</string>
    <string name="attendance_search">查询 </string>
    <string name="attendance_pb">考勤排班 </string>
    <string name="attendance_pb_s">查询排班 </string>
    <string name="attendance_leave">请假</string>
    <string name="send_person">发布人 </string>
    <string name="dingdanbianhao">订单编号 : </string>
    <string name="zhifujine">支付金额 : </string>
    <string name="zhifu_success">支付成功 !</string>
    <string name="zhifu_result">支付</string>
    <string name="sure_pay">确认支付</string>
    <string name="querenzhifu">点击【确认】进行订单支付。\n</string>
    <string name="zhifuqueren">确　　认</string>
    <string name="zhifuqvxiao">取　　消</string>
    <string name="zhifu_no_search_data">没有查询到相关数据</string>
    <string name="zhifu">支 付</string>
    <string name="bbs_xinxiliu">信息流</string>
    <string name="bbs_please_input">请输入文字...</string>
    <string name="bbs_replay">回复</string>
    <string name="bbs_jifen">积分</string>
    <string name="bbs_fabu">发布</string>
    <string name="bbs_pinglun">评论</string>
    <string name="bbs_l">(</string>
    <string name="bbs_r">)</string>
    <string name="click_to_see_photo">点击查看照片</string>
    <string name="task_list_head_ch">任务</string>
    <string name="task_list_head_en">Assignment</string>
    <string name="notify_list_back_ch">返回</string>
    <string name="notify_list_back_en">Back</string>
    <string name="func_show_data">预览采集信息</string>
    <string name="func_show_detail_give_data">提   交</string>
    <string name="zhaopianyulan">照片预览</string>
    <string name="xiaoliangshuju">销量数据:</string>
    <string name="location_title">定位</string>
    <string name="confirm">确  定</string>
    <string name="cancel">取  消</string>
    <string name="contion">继  续</string>
    <string name="quit">退  出</string>
    <string name="retry">重  试</string>
    <string name="loading_more">更  多</string>
    <string name="new_location">重新定位</string>
    <string name="submit_loc">提交位置</string>
    <string name="btn_add">添 加</string>
    <string name="btn_save">保 存</string>
    <string name="btn_save_stencil">模 版</string>
    <string name="visit_store">拜访</string>
    <string name="is_store_add_mod">新店上报</string>
    <string name="web_chat">企业微信</string>
    <string name="mail_list">通讯录</string>
    <string name="nearby_visit">就近拜访</string>
    <string name="BBS">圈子</string>
    <string name="HELP">帮助</string>
    <string name="order">订单</string>
    <string name="order_3">订单</string>
    <string name="order_3_send">送货</string>
    <string name="car_sales">车销</string>
    <string name="attendance">考勤</string>
    <string name="init">正在加载...</string>
    <string name="edit">编辑</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>
    <string name="all_delete">全删除</string>
    <string name="waitForAMoment">正在定位,请稍候...</string>
    <string name="initTable">正在加载,请稍候...</string>
    <string name="submint_loding">正在提交数据...</string>
    <string name="tip">提示</string>
    <string name="isCompletion">你有选项没操作，请操作!</string>
    <string name="priview">您没有添加内容!</string>
    <string name="tip_choose_delete_photo">请选择要删除的图片</string>
    <string name="checkin">请先签到</string>
    <string name="checkinName">签到</string>
    <string name="checkout_title">离开</string>
    <string name="noNotice">没有公告信息！</string>
    <string name="noTask">没有任务信息！</string>
    <string name="push_update_data">由于您的消息过多，系统强制要求您关闭应用，并重新登录。</string>
    <string name="TIP_LEGAL_NOTICES">法律声明</string>
    <string name="TIP">提示 </string>
    <string name="Cancle">取消</string>
    <string name="net_exception">网络异常下载失败，是否重新下载！</string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">相册</string>
    <string name="approval_select_your_answer_item">选择您的回答项</string>
    <string name="approval_first_answer">1、通过，优秀</string>
    <string name="approval_second_answer">2、通过，良好</string>
    <string name="approval_third_answer">3、不通过</string>
    <string name="approval_note">备注:</string>
    <string name="approval_c_note">可填写备注</string>
    <string name="approval_submit">提交</string>
    <string name="login_title">中融VOFFICE</string>
    <string name="login_content">安全监管防患未然\n\n实时督查全面管控</string>
    <string name="login_logi">登&#160;&#160;&#160;录</string>
    <string name="login_exp">体&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;验</string>
    <string name="login_exit">管理员入口>></string>
    <string name="scan_info">请将激光扫描线对准扫描码</string>
    <string name="scan_info1">正在扫描中...</string>
    <string name="scan_info2">重新扫描</string>
    <string name="scan_info3">手机扫描枪对准扫描码,按下手机两侧任一扫描按键进行扫描</string>
    <string name="scan_info4">等待扫描...</string>
    <string name="work_sunday">日</string>
    <string name="work_mon">一</string>
    <string name="work_tue">二</string>
    <string name="work_wen">三</string>
    <string name="work_thr">四</string>
    <string name="work_fri">五</string>
    <string name="work_sat">六</string>
</resources>