<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <TextView
    	android:id="@+id/snap_image"
    	android:layout_width="match_parent"
    	android:layout_height="446px"
    	android:gravity="center"
    	android:textSize="18sp"
    	android:text="@string/scan_info" >
	</TextView>
	
   
	
    <TextView
	    android:id="@+id/textDecode"
	    android:layout_width="match_parent"
	    android:layout_height="120px"
	    android:gravity="center"
	    android:text="@string/scan_info1"/>
    <Button 
        android:id="@+id/buttonDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_info2"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"/> 

</LinearLayout>
