<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
     <TextView
    	android:id="@+id/scans200_tip"
    	android:layout_width="match_parent"
    	android:layout_height="200px"
    	android:gravity="center"
    	android:textSize="16sp"
    	android:textColor="@color/white"
    	android:text="@string/scan_info3" >
	</TextView>

     <TextView
         android:id="@+id/scans200_resultcode"
         android:layout_width="match_parent"
         android:layout_height="120px"
         android:gravity="center"
         android:text="@string/scan_info4" />

    <Button 
        android:id="@+id/scans200_rescan"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/coner_shape_bgappcolor"
        android:text="@string/notify_list_back_ch"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"/> 

</LinearLayout>
