<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CalendarCard.Root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/cardDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/CalendarCard.Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cardDay1"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_mon" />

            <TextView
                android:id="@+id/cardDay2"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_tue" />

            <TextView
                android:id="@+id/cardDay3"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_wen" />

            <TextView
                android:id="@+id/cardDay4"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_thr" />

            <TextView
                android:id="@+id/cardDay5"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_fri" />

            <TextView
                android:id="@+id/cardDay6"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_sat" />

            <TextView
                android:id="@+id/cardDay7"
                style="@style/CalendarCard.Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work_sunday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_line" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardDays" >

        <LinearLayout
            android:id="@+id/cardGrid"
            style="@style/CalendarCard.Grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/card_row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_line" />

            <include layout="@layout/card_row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_line" />

            <include layout="@layout/card_row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_line" />

            <include layout="@layout/card_row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_line" />

            <include layout="@layout/card_row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_line" />

            <include layout="@layout/card_row" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>