<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
         android:background="@android:color/transparent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/init_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/zr_app_icon" />

            <TextView
                android:id="@+id/splash_title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_title"
                android:textColor="@color/black1"
                android:textSize="18sp"
                android:textStyle="bold"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
             android:background="@android:color/transparent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/splash_center_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/login_content"
                android:textColor="#404040"
                android:lineSpacingExtra="2dp"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_enter_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_corner_appcorlor_selector1"

            android:paddingBottom="10dp"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"

            android:text="@string/login_logi"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_corner_appcorlor_selector2"

            android:paddingBottom="10dp"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginBottom="10dp"
            android:text="@string/login_exp"
            android:textColor="@color/app_color"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingBottom="30dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="10dp"
            android:text="@string/login_exit"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/app_color"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>