<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/home_menu_fix_white"
    android:orientation="vertical"
    android:padding="1dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/home_menu_fix_white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/TIP"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_menu_fix_white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/tv_location_dialog_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/net_exception"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/home_menu_fix_white" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dialog_btn_parent_height"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp" >

            <LinearLayout
                android:id="@+id/ll_netException_dialog_confirm"
                style="@style/dialogConfirmButton" >

                <TextView
                    style="@style/shadowTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textColor="@color/app_color"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_netException_dialog_cancel"
                style="@style/dialogCancleButton"
                android:layout_toLeftOf="@+id/ll_netException_dialog_confirm" >

                <TextView
                    style="@style/shadowTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/app_color"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>